# frontend-n8n-skripsi

./: .dockerignore  .env.example  .gitignore  Dockerfile  app.py  celery_app.py  celery_worker.py  config.py  db_setup.py  docker-compose.yml  env.example  environment.yml  fe-n8n.yml  linux_environment.yml  make_celery.py  package.json  pyproject.toml  readme.md  requirements.in  requirements.txt  run.py  start.sh  start_gunicorn.sh  start_win.txt  todo.md  win_environment.yml  win_new_environment.yml  wsgi.py
blueprints/: __init__.py
blueprints/api/: routes.py  utils.py
blueprints/chat/: routes.py
blueprints/main/: routes.py  tasks.py
blueprints/prediction/: routes.py
blueprints/summary/: routes.py  task.py
blueprints/tasks/: routes.py  utils.py
blueprints/upload/: routes.py  task.py  utils.py
blueprints/workflow/: routes.py
static/: output.css
static/css/: custom_admin.css
static/javascript/: chat.js  footer.js  index.js  logs.js  prediksi_stok.js  summary_agent.js  tasks.js  upload_stok.js  workflow_timeline.js
templates/: 404.html  chat.html  daily_sales.html  hasil_rangkuman.html  index.html  manage_csv.html  predictions.html  prediksi_stok.html  rangkuman.html  tasks.html  upload_stok.html  workflow_debug.html  workflow_timeline.html
templates/admin/: custom_base.html  master.html
templates/components/: footer.html  header.html
