[project]
name = "frontend-n8n-skripsi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "babel>=2.17.0",
    "boto3>=1.40.48",
    "celery>=5.5.3",
    "eventlet>=0.40.3",
    "flask>=3.1.1",
    "flask-admin>=2.0.0",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "gdown>=5.2.0",
    "gunicorn>=23.0.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.1.1",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.44",
]
